--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,22 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <a href="/new" class="new-link">New Message</a>
+    <main>
+      <h1><%= title %></h1>
+      <section id="messages">
+        <% messages.forEach(msg => { %>
+        <div class="message">
+          <p class="msg-text"><%= msg.text %></p>
+          <p><%= msg.added.toUTCString() %></p>
+          <p class="msg-user">- <%= msg.user %></p>
+        </div>
+        <% }) %>
+      </section>
+    </main>
   </body>
 </html>
